# pdfium-binaries

./: build.sh
.github/workflows/: build.yml
args/: darwin.args.gn  linux.args.gn  windows.args.gn
patches/V4634/: pdfium.patch  pdfium_build.patch  pdfium_h.patch
src/: function-names.txt
