# Disable component build
is_component_build = false

# Build PDFium either with or without v8 support (default = true)
pdf_enable_v8 = false

# Build PDFium standalone (default = false)
pdf_is_standalone = true

# With symbol_level = 0 there is no source-level debugging but call stacks still have function names.
symbol_level = 0
